--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
               <h4 class="my-0 fw-normal">Maine Coon</h4>
             </div>
             <div class="card-body">
-              <h1 class="card-title pricing-card-title">$15<small class="text-body-secondary fw-dark">/mo</small></h1>
+              <h1 class="card-title pricing-card-title">£15<small class="text-body-secondary fw-dark">/mo</small></h1>
               <ul class="list-unstyled mt-3 mb-4">
                 <li>Unlimited Matches</li>
                 <li>Unlimited Messages</li>
